--- a/yummy-red-1.0.0/aboutus.html
+++ b/yummy-red-1.0.0/aboutus.html
@@ -60,15 +60,15 @@
   <main class="main">
 
     <!-- Hero Section -->
-    <section id="hero" class="hero section light-background">
+    <section id="hero" class="hero section light-background" style="background-image: url('./assets/img/hero_background.avif');">
 
       <div class="container">
         <div class="row gy-4 justify-content-center align-items-center">
           <div class="col-lg-5 order-2 order-lg-1 d-flex flex-column justify-content-center align-items-center">
-            <img src="assets/img/hero_background.avif" alt="">
+            <!-- <img src="assets/img/hero_background.avif" alt=""> -->
             <h1 data-aos="fade-up">About Us</h1>
           </div>
-        </div>
+      </div>
       </div>
 
     </section><!-- /Hero Section -->
@@ -87,10 +87,12 @@
         <div class="row gy-4">
           <div class="col-lg-7" data-aos="fade-up" data-aos-delay="100">
             <img src="assets/img/about.jpg" class="img-fluid mb-4" alt="Chefs preparing Bengali dishes">
+            <a href="https://wa.me/9339279049">
             <div class="book-a-table">
               <h3>Book a Table</h3>
               <p>+91 93392 79049</p>
             </div>
+          </a>
           </div>
           <div class="col-lg-5" data-aos="fade-up" data-aos-delay="250">
             <div class="content ps-0 ps-lg-5">
