--- a/yummy-red-1.0.0/index.html
+++ b/yummy-red-1.0.0/index.html
@@ -94,10 +94,12 @@
         <div class="row gy-4">
           <div class="col-lg-7" data-aos="fade-up" data-aos-delay="100">
             <img src="assets/img/about.jpg" class="img-fluid mb-4" alt="Chefs preparing Bengali dishes">
+            <a href="https://wa.me/9339279049">
             <div class="book-a-table">
               <h3>Book a Table</h3>
               <p>+91 93392 79049</p>
             </div>
+          </a>
           </div>
           <div class="col-lg-5" data-aos="fade-up" data-aos-delay="250">
             <div class="content ps-0 ps-lg-5">
