--- a/yummy-red-1.0.0/aboutus.html
+++ b/yummy-red-1.0.0/aboutus.html
@@ -66,7 +66,7 @@
         <div class="row gy-4 justify-content-center align-items-center">
           <div class="col-lg-5 order-2 order-lg-1 d-flex flex-column justify-content-center align-items-center">
             <!-- <img src="assets/img/hero_background.avif" alt=""> -->
-            <h1 data-aos="fade-up">About Us</h1>
+            <h1 data-aos="fade-up" style="color: #FF5F1F;">About Us</h1>
           </div>
       </div>
       </div>
