--- a/yummy-red-1.0.0/contact.html
+++ b/yummy-red-1.0.0/contact.html
@@ -60,12 +60,12 @@
   <main class="main">
 
     <!-- Hero Section -->
-    <section id="hero" class="hero section light-background">
+    <section id="hero" class="hero section light-background" style="background-image: url('./assets/img/hero_background.avif');">
 
       <div class="container">
         <div class="row gy-4 justify-content-center align-items-center">
           <div class="col-lg-5 order-2 order-lg-1 d-flex flex-column justify-content-center align-items-center">
-            <h1 data-aos="fade-up">Contact Us</h1>
+            <h1 data-aos="fade-up" style="color: #FF5F1F;">Contact Us</h1>
           </div>
         </div>
       </div>
