--- a/Avordaw Live Kitchen/aboutus.html
+++ b/Avordaw Live Kitchen/aboutus.html
@@ -40,7 +40,7 @@
 
       <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
         <img src="assets/img/Avordaw_logo.jpg" alt="Avordaw Logo">
-        <h1 class="sitename">Avordaw Live Kitchen</h1>
+        <h1 class="sitename">Avordaw Multi Cuisine Live Kitchen</h1>
       </a>
 
       <nav id="navmenu" class="navmenu">
@@ -79,14 +79,14 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>About Us</h2>
-        <p><span>Discover</span> <span class="description-title">Our Story</span></p>
+        <p><span>Discover</span> <span class="description-title">Our Culinary Story</span></p>
       </div><!-- End Section Title -->
 
       <div class="container">
 
         <div class="row gy-4">
           <div class="col-lg-7" data-aos="fade-up" data-aos-delay="100">
-            <img src="assets/img/about.jpg" class="img-fluid mb-4" alt="Chefs preparing Bengali dishes">
+            <img src="assets/img/gallery/8.jpg" class="img-fluid mb-4" alt="Chefs preparing Bengali dishes">
             <a href="https://wa.me/9339279049">
             <div class="book-a-table">
               <h3>Book a Table</h3>
@@ -97,21 +97,18 @@
           <div class="col-lg-5" data-aos="fade-up" data-aos-delay="250">
             <div class="content ps-0 ps-lg-5">
               <p class="fst-italic">
-                At Avordaw Live Kitchen, we bring you the authentic taste of Bengal, where every dish tells a story of tradition and culture.
+                At Avordaw Live Kitchen, we bring you the authentic taste of world cuisines, where every dish tells a story of tradition, culture, and innovation.
               </p>
               <ul>
-                <li><i class="bi bi-check-circle-fill"></i> <span>100% authentic Bengali recipes using traditional cooking methods</span></li>
+                <li><i class="bi bi-check-circle-fill"></i> <span>Authentic recipes from around the world using traditional and modern cooking methods</span></li>
                 <li><i class="bi bi-check-circle-fill"></i> <span>Locally sourced fresh ingredients for maximum flavor</span></li>
-                <li><i class="bi bi-check-circle-fill"></i> <span>Expert chefs from Kolkata with decades of experience in Bengali cuisine</span></li>
+                <li><i class="bi bi-check-circle-fill"></i> <span>Expert chefs with decades of experience in global cuisines</span></li>
               </ul>
               <p>
-                Our journey began in the heart of Kolkata, where our founders grew up surrounded by the vibrant food culture of Bengal. We've dedicated ourselves to preserving these culinary traditions while adapting them for modern palates. From the mustard-infused fish curries to the delicate sandesh desserts, every item on our menu is a celebration of Bengal's rich gastronomic heritage.
+                Our journey began in the heart of Kolkata, where our founders grew up surrounded by the vibrant food culture of Bengal. From the bustling street markets filled with the aroma of freshly ground spices to the warmth of family kitchens echoing with laughter and the sizzle of traditional recipes, their earliest memories are steeped in culinary tradition.<br><br>
+  Over the years, we've dedicated ourselves to preserving these culinary traditions while adapting them for modern palates. Our chefs have traveled across regions, learning age-old techniques from local artisans and infusing them with contemporary twists. Each dish is thoughtfully crafted, balancing authenticity with innovation, so that every guest can savor both nostalgia and novelty in every bite.<br><br>
+  We believe that food is more than sustenance—it's a bridge between cultures, a keeper of memories, and a source of joy. At Avordaw Live Kitchen, we invite you to embark on this flavorful journey with us, discovering the stories and traditions that make each meal truly unforgettable.
               </p>
-
-              <div class="position-relative mt-4">
-                <img src="assets/img/about-2.jpg" class="img-fluid" alt="Traditional Bengali cooking">
-                <a href="https://www.youtube.com/watch?v=Y7f98aduVJ8" class="glightbox pulsating-play-btn"></a>
-              </div>
             </div>
           </div>
         </div>
@@ -126,7 +123,7 @@
   <!-- Section Title -->
   <div class="container section-title" data-aos="fade-up">
     <h2>Our Culinary Artists</h2>
-    <p><span>Meet The</span> <span class="description-title">Maestros of Bengali Cuisine</span></p>
+    <p><span>Meet The</span> <span class="description-title">Masters of World Cuisine</span></p>
   </div><!-- End Section Title -->
 
   <div class="container">
@@ -137,17 +134,12 @@
         <div class="team-member">
           <div class="member-img">
             <img src="assets/img/chefs/chefs-1.jpg" class="img-fluid" alt="Soumitra Banerjee - Master Chef">
-            <div class="social">
-              <a href=""><i class="bi bi-twitter-x"></i></a>
-              <a href=""><i class="bi bi-facebook"></i></a>
-              <a href=""><i class="bi bi-instagram"></i></a>
-              <a href=""><i class="bi bi-linkedin"></i></a>
-            </div>
           </div>
           <div class="member-info">
             <h4>Soumitra Banerjee</h4>
             <span>Master Chef (Ustod)</span>
-            <p>Hailing from Kolkata's famed Park Street restaurants, Chef Soumitra brings 25 years of expertise in traditional Bengali cuisine. Specializing in signature dishes like Shorshe Ilish and Kosha Mangsho, he maintains authentic flavors while innovating presentation.</p>
+            <p>Global Cuisine Specialist</span>
+              <p>Chef Nandini brings authentic tastes from Mediterranean, Japanese, Middle Eastern, and Latin American kitchens, ensuring every guest enjoys a truly global dining experience.</p>
           </div>
         </div>
       </div><!-- End Chef Team Member -->
@@ -156,40 +148,14 @@
         <div class="team-member">
           <div class="member-img">
             <img src="assets/img/chefs/chefs-2.jpg" class="img-fluid" alt="Nandini Chakraborty - Mistanno Specialist">
-            <div class="social">
-              <a href=""><i class="bi bi-twitter-x"></i></a>
-              <a href=""><i class="bi bi-facebook"></i></a>
-              <a href=""><i class="bi bi-instagram"></i></a>
-              <a href=""><i class="bi bi-linkedin"></i></a>
-            </div>
           </div>
           <div class="member-info">
             <h4>Nandini Chakraborty</h4>
-            <span>Mistanno Specialist</span>
-            <p>Preserving Bengal's sweet-making heritage, Chef Nandini crafts exquisite mishti like Roshogolla, Sandesh, and Mishti Doi using century-old family recipes from Bardhaman. Her creations balance traditional techniques with modern dietary preferences.</p>
+            <span>Indian Specialist</span>
+            <p>With decades of international experience, Chef Soumitra excels in Italian, Thai, French, and Indian cuisines, creating innovative dishes that celebrate flavors from around the world.</p>
           </div>
         </div>
       </div><!-- End Chef Team Member -->
-
-      <div class="col-lg-4 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="300">
-        <div class="team-member">
-          <div class="member-img">
-            <img src="assets/img/chefs/chefs-3.jpg" class="img-fluid" alt="Rafiqul Islam - Dhaka Cuisine Expert">
-            <div class="social">
-              <a href=""><i class="bi bi-twitter-x"></i></a>
-              <a href=""><i class="bi bi-facebook"></i></a>
-              <a href=""><i class="bi bi-instagram"></i></a>
-              <a href=""><i class="bi bi-linkedin"></i></a>
-            </div>
-          </div>
-          <div class="member-info">
-            <h4>Rafiqul Islam</h4>
-            <span>Dhaka Cuisine Expert</span>
-            <p>From Old Dhaka's legendary kitchens, Chef Rafiq brings the robust flavors of East Bengal - mastering dishes like Morog Polao and Kacchi Biryani. His spice blends reflect the Mughal influence on Bengali cuisine, passed down through generations.</p>
-          </div>
-        </div>
-      </div><!-- End Chef Team Member -->
-
     </div>
 
   </div>
