--- a/Avordaw Live Kitchen/contact.html
+++ b/Avordaw Live Kitchen/contact.html
@@ -40,7 +40,7 @@
 
       <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
         <img src="assets/img/Avordaw_logo.jpg" alt="Avordaw Logo">
-        <h1 class="sitename">Avordaw Live Kitchen</h1>
+        <h1 class="sitename">Avordaw Multi Cuisine Live Kitchen</h1>
       </a>
 
       <nav id="navmenu" class="navmenu">
@@ -84,7 +84,7 @@
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
         <div class="mb-5">
-          <iframe style="width: 100%; height: 400px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3682.017656653112!2d88.3710582033372!3d22.653130292460677!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39f89db187c53d91%3A0xe979c89f64e1520e!2sHDFC%20Bank!5e0!3m2!1sen!2sin!4v1747724233118!5m2!1sen!2sin" frameborder="0" allowfullscreen=""></iframe>
+          <iframe style="width: 100%; height: 400px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3682.032659487907!2d88.3758995!3d22.652570900000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39f89db1686595c5%3A0x3c53b5a9fb43f939!2sMotilal%20Oswal%20Financial%20Services%20Limited!5e0!3m2!1sen!2sin!4v1747809893931!5m2!1sen!2sin" frameborder="0" allowfullscreen=""></iframe>
         </div><!-- End Google Maps -->
 
         <div class="row gy-4">
