--- a/Avordaw Live Kitchen/aboutus.html
+++ b/Avordaw Live Kitchen/aboutus.html
@@ -133,13 +133,12 @@
       <div class="col-lg-4 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
         <div class="team-member">
           <div class="member-img">
-            <img src="assets/img/chefs/chefs-1.jpg" class="img-fluid" alt="Soumitra Banerjee - Master Chef">
+            <img src="assets/img/chefs/chefs-1.jpg" class="img-fluid" alt="Sanjib Bhowmic - Master Chef">
           </div>
           <div class="member-info">
-            <h4>Soumitra Banerjee</h4>
-            <span>Master Chef (Ustod)</span>
-            <p>Global Cuisine Specialist</span>
-              <p>Chef Nandini brings authentic tastes from Mediterranean, Japanese, Middle Eastern, and Latin American kitchens, ensuring every guest enjoys a truly global dining experience.</p>
+            <h4>Sanjib Bhowmic</h4>
+            <span>Global Cuisine Specialist</span>
+              <p>Chef Sanjib brings authentic tastes from Mediterranean, Japanese, Middle Eastern, and Latin American kitchens, ensuring every guest enjoys a truly global dining experience.</p>
           </div>
         </div>
       </div><!-- End Chef Team Member -->
@@ -147,12 +146,12 @@
       <div class="col-lg-4 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
         <div class="team-member">
           <div class="member-img">
-            <img src="assets/img/chefs/chefs-2.jpg" class="img-fluid" alt="Nandini Chakraborty - Mistanno Specialist">
+            <img src="assets/img/chefs/chefs-2.jpg" class="img-fluid" alt="Vhogirath Roy - Indian Specialist">
           </div>
           <div class="member-info">
-            <h4>Nandini Chakraborty</h4>
+            <h4>Vhogirath Roy</h4>
             <span>Indian Specialist</span>
-            <p>With decades of international experience, Chef Soumitra excels in Italian, Thai, French, and Indian cuisines, creating innovative dishes that celebrate flavors from around the world.</p>
+            <p>With decades of international experience, Chef Vhogirath excels in Italian, Thai, French, and Indian cuisines, creating innovative dishes that celebrate flavors from around the world.</p>
           </div>
         </div>
       </div><!-- End Chef Team Member -->
