--- a/Avordaw Live Kitchen/index.html
+++ b/Avordaw Live Kitchen/index.html
@@ -66,7 +66,7 @@
         <div class="row gy-4 justify-content-center justify-content-lg-between">
           <div class="col-lg-5 order-2 order-lg-1 d-flex flex-column justify-content-center">
             <h1 data-aos="fade-up">Savor the Authentic<br>Flavors of the World</h1>
-            <p data-aos="fade-up" data-aos-delay="100">Experience a live kitchen with a rich variety of cuisines from around the globe, prepared fresh before your eyes. And we provide 0 oil dishes with live 
+            <p data-aos="fade-up" data-aos-delay="100">Experience a live kitchen with a rich variety of cuisines from around the globe, prepared fresh before your eyes. And we provide zero oil dishes with live 
               fresh healthy and protin food.</p>
             <div class="d-flex" data-aos="fade-up" data-aos-delay="200">
               <a href="https://wa.me/9339279049" class="btn-get-started">Booka a Table</a>
@@ -212,63 +212,63 @@
             <div class="row gy-5">
 
               <div class="col-lg-4 menu-item">
-                <a href="assets/img/menu/menu-item-1.png" class="glightbox"><img src="assets/img/menu/menu-item-1.png" class="menu-img img-fluid" alt="Dal Tadka"></a>
+                <a href="assets/img/menu/indian/menu-item-1.png" class="glightbox"><img src="assets/img/menu/indian/menu-item-1.png" class="menu-img img-fluid" alt="Dal Tadka"></a>
                 <h4>Dal Tadka</h4>
                 <p class="ingredients">
                   Yellow lentils tempered with cumin, garlic, and spices, served with steamed rice.
                 </p>
               </div>
               <div class="col-lg-4 menu-item">
-                <a href="assets/img/menu/menu-item-2.png" class="glightbox"><img src="assets/img/menu/menu-item-2.png" class="menu-img img-fluid" alt="Hyderabadi Diwani Handi"></a>
+                <a href="assets/img/menu/indian/menu-item-2.png" class="glightbox"><img src="assets/img/menu/indian/menu-item-2.png" class="menu-img img-fluid" alt="Hyderabadi Diwani Handi"></a>
                 <h4>Hyderabadi Diwani Handi</h4>
                 <p class="ingredients">
                   Mixed vegetables cooked in a rich, creamy gravy with aromatic Indian spices.
                 </p>
               </div>
               <div class="col-lg-4 menu-item">
-                <a href="assets/img/menu/menu-item-3.png" class="glightbox"><img src="assets/img/menu/menu-item-3.png" class="menu-img img-fluid" alt="Malai Kofta"></a>
+                <a href="assets/img/menu/indian/menu-item-3.png" class="glightbox"><img src="assets/img/menu/indian/menu-item-3.png" class="menu-img img-fluid" alt="Malai Kofta"></a>
                 <h4>Malai Kofta</h4>
                 <p class="ingredients">
                   Soft cottage cheese and potato dumplings in a smooth, flavorful tomato-cream sauce.
                 </p>
               </div>
               <div class="col-lg-4 menu-item">
-                <a href="assets/img/menu/menu-item-4.png" class="glightbox"><img src="assets/img/menu/menu-item-4.png" class="menu-img img-fluid" alt="Palak Paneer"></a>
+                <a href="assets/img/menu/indian/menu-item-4.png" class="glightbox"><img src="assets/img/menu/indian/menu-item-4.png" class="menu-img img-fluid" alt="Palak Paneer"></a>
                 <h4>Palak Paneer</h4>
                 <p class="ingredients">
                   Fresh cottage cheese cubes simmered in a vibrant spinach gravy with Indian spices.
                 </p>
               </div>
               <div class="col-lg-4 menu-item">
-                <a href="assets/img/menu/menu-item-5.png" class="glightbox"><img src="assets/img/menu/menu-item-5.png" class="menu-img img-fluid" alt="Chicken Bharta"></a>
+                <a href="assets/img/menu/indian/menu-item-5.png" class="glightbox"><img src="assets/img/menu/indian/menu-item-5.png" class="menu-img img-fluid" alt="Chicken Bharta"></a>
                 <h4>Chicken Bharta</h4>
                 <p class="ingredients">
                   Shredded chicken cooked with eggs, cream, and a blend of traditional Indian spices.
                 </p>
               </div>
               <div class="col-lg-4 menu-item">
-                <a href="assets/img/menu/menu-item-6.png" class="glightbox"><img src="assets/img/menu/menu-item-6.png" class="menu-img img-fluid" alt="Mugh Kolapuri"></a>
-                <h4>Mugh Kolapuri</h4>
+                <a href="assets/img/menu/indian/menu-item-6.png" class="glightbox"><img src="assets/img/menu/indian/menu-item-6.png" class="menu-img img-fluid" alt="Mugh Kolapuri"></a>
+                <h4>Murgh Kolapuri</h4>
                 <p class="ingredients">
                   Spicy chicken curry from Kolhapur, Maharashtra, known for its bold flavors and fiery taste.
                 </p>
               </div>
               <div class="col-lg-4 menu-item">
-                <a href="assets/img/menu/menu-item-6.png" class="glightbox"><img src="assets/img/menu/menu-item-6.png" class="menu-img img-fluid" alt="Chicken Tikka Masala"></a>
+                <a href="assets/img/menu/indian/menu-item-7.png" class="glightbox"><img src="assets/img/menu/indian/menu-item-7.png" class="menu-img img-fluid" alt="Chicken Tikka Masala"></a>
                 <h4>Chicken Tikka Masala</h4>
                 <p class="ingredients">
                   Grilled chicken pieces in a creamy tomato-based sauce, flavored with Indian spices.
                 </p>
               </div>
               <div class="col-lg-4 menu-item">
-                <a href="assets/img/menu/menu-item-6.png" class="glightbox"><img src="assets/img/menu/menu-item-6.png" class="menu-img img-fluid" alt="Mutton Rogan Josh"></a>
+                <a href="assets/img/menu/indian/menu-item-8.png" class="glightbox"><img src="assets/img/menu/indian/menu-item-8.png" class="menu-img img-fluid" alt="Mutton Rogan Josh"></a>
                 <h4>Mutton Rogan Josh</h4>
                 <p class="ingredients">
                   Tender mutton cooked in a rich, aromatic gravy with Kashmiri spices.
                 </p>
               </div>
               <div class="col-lg-4 menu-item">
-                <a href="assets/img/menu/menu-item-6.png" class="glightbox"><img src="assets/img/menu/menu-item-6.png" class="menu-img img-fluid" alt="Mutton Hari Court"></a>
+                <a href="assets/img/menu/indian/menu-item-9.png" class="glightbox"><img src="assets/img/menu/indian/menu-item-9.png" class="menu-img img-fluid" alt="Mutton Hari Court"></a>
                 <h4>Mutton Hari Court</h4>
                 <p class="ingredients">
                   Mutton pieces cooked with fresh herbs and green spices for a unique flavor.
@@ -376,7 +376,6 @@
               <div>
                 <h3>Call Us</h3>
                 <p>+91 93392 79049</p>
-                <p>+91 33 1234 5678</p>
               </div>
             </div>
           </div><!-- End Info Item -->
