--- a/Avordaw Live Kitchen/menu.html
+++ b/Avordaw Live Kitchen/menu.html
@@ -123,63 +123,63 @@
             <div class="row gy-5">
 
               <div class="col-lg-4 menu-item">
-                <a href="assets/img/menu/menu-item-1.png" class="glightbox"><img src="assets/img/menu/menu-item-1.png" class="menu-img img-fluid" alt="Dal Tadka"></a>
+                <a href="assets/img/menu/indian/menu-item-1.png" class="glightbox"><img src="assets/img/menu/indian/menu-item-1.png" class="menu-img img-fluid" alt="Dal Tadka"></a>
                 <h4>Dal Tadka</h4>
                 <p class="ingredients">
                   Yellow lentils tempered with cumin, garlic, and spices, served with steamed rice.
                 </p>
               </div>
               <div class="col-lg-4 menu-item">
-                <a href="assets/img/menu/menu-item-2.png" class="glightbox"><img src="assets/img/menu/menu-item-2.png" class="menu-img img-fluid" alt="Hyderabadi Diwani Handi"></a>
+                <a href="assets/img/menu/indian/menu-item-2.png" class="glightbox"><img src="assets/img/menu/indian/menu-item-2.png" class="menu-img img-fluid" alt="Hyderabadi Diwani Handi"></a>
                 <h4>Hyderabadi Diwani Handi</h4>
                 <p class="ingredients">
                   Mixed vegetables cooked in a rich, creamy gravy with aromatic Indian spices.
                 </p>
               </div>
               <div class="col-lg-4 menu-item">
-                <a href="assets/img/menu/menu-item-3.png" class="glightbox"><img src="assets/img/menu/menu-item-3.png" class="menu-img img-fluid" alt="Malai Kofta"></a>
+                <a href="assets/img/menu/indian/menu-item-3.png" class="glightbox"><img src="assets/img/menu/indian/menu-item-3.png" class="menu-img img-fluid" alt="Malai Kofta"></a>
                 <h4>Malai Kofta</h4>
                 <p class="ingredients">
                   Soft cottage cheese and potato dumplings in a smooth, flavorful tomato-cream sauce.
                 </p>
               </div>
               <div class="col-lg-4 menu-item">
-                <a href="assets/img/menu/menu-item-4.png" class="glightbox"><img src="assets/img/menu/menu-item-4.png" class="menu-img img-fluid" alt="Palak Paneer"></a>
+                <a href="assets/img/menu/indian/menu-item-4.png" class="glightbox"><img src="assets/img/menu/indian/menu-item-4.png" class="menu-img img-fluid" alt="Palak Paneer"></a>
                 <h4>Palak Paneer</h4>
                 <p class="ingredients">
                   Fresh cottage cheese cubes simmered in a vibrant spinach gravy with Indian spices.
                 </p>
               </div>
               <div class="col-lg-4 menu-item">
-                <a href="assets/img/menu/menu-item-5.png" class="glightbox"><img src="assets/img/menu/menu-item-5.png" class="menu-img img-fluid" alt="Chicken Bharta"></a>
+                <a href="assets/img/menu/indian/menu-item-5.png" class="glightbox"><img src="assets/img/menu/indian/menu-item-5.png" class="menu-img img-fluid" alt="Chicken Bharta"></a>
                 <h4>Chicken Bharta</h4>
                 <p class="ingredients">
                   Shredded chicken cooked with eggs, cream, and a blend of traditional Indian spices.
                 </p>
               </div>
               <div class="col-lg-4 menu-item">
-                <a href="assets/img/menu/menu-item-6.png" class="glightbox"><img src="assets/img/menu/menu-item-6.png" class="menu-img img-fluid" alt="Mugh Kolapuri"></a>
-                <h4>Mugh Kolapuri</h4>
+                <a href="assets/img/menu/indian/menu-item-6.png" class="glightbox"><img src="assets/img/menu/indian/menu-item-6.png" class="menu-img img-fluid" alt="Mugh Kolapuri"></a>
+                <h4>Murgh Kolapuri</h4>
                 <p class="ingredients">
                   Spicy chicken curry from Kolhapur, Maharashtra, known for its bold flavors and fiery taste.
                 </p>
               </div>
               <div class="col-lg-4 menu-item">
-                <a href="assets/img/menu/menu-item-6.png" class="glightbox"><img src="assets/img/menu/menu-item-6.png" class="menu-img img-fluid" alt="Chicken Tikka Masala"></a>
+                <a href="assets/img/menu/indian/menu-item-7.png" class="glightbox"><img src="assets/img/menu/indian/menu-item-7.png" class="menu-img img-fluid" alt="Chicken Tikka Masala"></a>
                 <h4>Chicken Tikka Masala</h4>
                 <p class="ingredients">
                   Grilled chicken pieces in a creamy tomato-based sauce, flavored with Indian spices.
                 </p>
               </div>
               <div class="col-lg-4 menu-item">
-                <a href="assets/img/menu/menu-item-6.png" class="glightbox"><img src="assets/img/menu/menu-item-6.png" class="menu-img img-fluid" alt="Mutton Rogan Josh"></a>
+                <a href="assets/img/menu/indian/menu-item-8.png" class="glightbox"><img src="assets/img/menu/indian/menu-item-8.png" class="menu-img img-fluid" alt="Mutton Rogan Josh"></a>
                 <h4>Mutton Rogan Josh</h4>
                 <p class="ingredients">
                   Tender mutton cooked in a rich, aromatic gravy with Kashmiri spices.
                 </p>
               </div>
               <div class="col-lg-4 menu-item">
-                <a href="assets/img/menu/menu-item-6.png" class="glightbox"><img src="assets/img/menu/menu-item-6.png" class="menu-img img-fluid" alt="Mutton Hari Court"></a>
+                <a href="assets/img/menu/indian/menu-item-9.png" class="glightbox"><img src="assets/img/menu/indian/menu-item-9.png" class="menu-img img-fluid" alt="Mutton Hari Court"></a>
                 <h4>Mutton Hari Court</h4>
                 <p class="ingredients">
                   Mutton pieces cooked with fresh herbs and green spices for a unique flavor.
@@ -197,42 +197,42 @@
             <div class="row gy-5">
 
               <div class="col-lg-4 menu-item">
-                <a href="assets/img/menu/menu-item-1.png" class="glightbox"><img src="assets/img/menu/menu-item-1.png" class="menu-img img-fluid" alt="Dal Tadka"></a>
+                <a href="assets/img/menu/afgani/menu-item-1.png" class="glightbox"><img src="assets/img/menu/afgani/menu-item-1.png" class="menu-img img-fluid" alt="Dal Tadka"></a>
                 <h4>Tandoori Murgh</h4>
                 <p class="ingredients">
                   Chicken marinated in yogurt and aromatic Indian spices, then roasted in a traditional clay oven for a smoky, tender finish.
                 </p>
               </div>
               <div class="col-lg-4 menu-item">
-                <a href="assets/img/menu/menu-item-2.png" class="glightbox"><img src="assets/img/menu/menu-item-2.png" class="menu-img img-fluid" alt="Hyderabadi Diwani Handi"></a>
+                <a href="assets/img/menu/afgani/menu-item-2.png" class="glightbox"><img src="assets/img/menu/afgani/menu-item-2.png" class="menu-img img-fluid" alt="Hyderabadi Diwani Handi"></a>
                 <h4>Angara Murgh Tikka</h4>
                 <p class="ingredients">
                   Succulent chicken pieces marinated in a fiery blend of spices and grilled to perfection, offering a bold and spicy taste.
                 </p>
               </div>
               <div class="col-lg-4 menu-item">
-                <a href="assets/img/menu/menu-item-3.png" class="glightbox"><img src="assets/img/menu/menu-item-3.png" class="menu-img img-fluid" alt="Malai Kofta"></a>
+                <a href="assets/img/menu/afgani/menu-item-3.png" class="glightbox"><img src="assets/img/menu/afgani/menu-item-3.png" class="menu-img img-fluid" alt="Malai Kofta"></a>
                 <h4>Cheese Murgh Malai Tikka</h4>
                 <p class="ingredients">
                   Juicy chicken chunks marinated with cream, cheese, and mild spices, grilled until soft and creamy.
                 </p>
               </div>
               <div class="col-lg-4 menu-item">
-                <a href="assets/img/menu/menu-item-4.png" class="glightbox"><img src="assets/img/menu/menu-item-4.png" class="menu-img img-fluid" alt="Palak Paneer"></a>
+                <a href="assets/img/menu/afgani/menu-item-4.png" class="glightbox"><img src="assets/img/menu/afgani/menu-item-4.png" class="menu-img img-fluid" alt="Palak Paneer"></a>
                 <h4>Bharwan Tangri Kebab</h4>
                 <p class="ingredients">
                   Chicken drumsticks stuffed with a flavorful mixture of minced meat and spices, then grilled for a juicy, aromatic delight.
                 </p>
               </div>
               <div class="col-lg-4 menu-item">
-                <a href="assets/img/menu/menu-item-5.png" class="glightbox"><img src="assets/img/menu/menu-item-5.png" class="menu-img img-fluid" alt="Chicken Bharta"></a>
+                <a href="assets/img/menu/afgani/menu-item-5.png" class="glightbox"><img src="assets/img/menu/afgani/menu-item-5.png" class="menu-img img-fluid" alt="Chicken Bharta"></a>
                 <h4>Jalpori Lajwab</h4>
                 <p class="ingredients">
                   A chef's special featuring tender chicken or lamb cooked in a rich, spicy gravy with a unique blend of house spices.
                 </p>
               </div>
               <div class="col-lg-4 menu-item">
-                <a href="assets/img/menu/menu-item-6.png" class="glightbox"><img src="assets/img/menu/menu-item-6.png" class="menu-img img-fluid" alt="Mugh Kolapuri"></a>
+                <a href="assets/img/menu/afgani/menu-item-6.png" class="glightbox"><img src="assets/img/menu/afgani/menu-item-6.png" class="menu-img img-fluid" alt="Mugh Kolapuri"></a>
                 <h4>Tandoori Jhinga</h4>
                 <p class="ingredients">
                   Jumbo prawns marinated in yogurt, herbs, and spices, then char-grilled for a smoky, succulent seafood experience.
@@ -250,42 +250,42 @@
             <div class="row gy-5">
 
               <div class="col-lg-4 menu-item">
-                <a href="assets/img/menu/menu-item-1.png" class="glightbox"><img src="assets/img/menu/menu-item-1.png" class="menu-img img-fluid" alt="Dal Tadka"></a>
+                <a href="assets/img/menu/italian/menu-item-1.png" class="glightbox"><img src="assets/img/menu/italian/menu-item-1.png" class="menu-img img-fluid" alt="Dal Tadka"></a>
                 <h4>Thai Basil Musroom</h4>
                 <p class="ingredients">
                   Stir-fried mushrooms tossed with fresh Thai basil, bell peppers, and a savory garlic-soy sauce, delivering a fragrant and umami-rich flavor.
                 </p>
               </div>
               <div class="col-lg-4 menu-item">
-                <a href="assets/img/menu/menu-item-2.png" class="glightbox"><img src="assets/img/menu/menu-item-2.png" class="menu-img img-fluid" alt="Hyderabadi Diwani Handi"></a>
+                <a href="assets/img/menu/italian/menu-item-2.png" class="glightbox"><img src="assets/img/menu/italian/menu-item-2.png" class="menu-img img-fluid" alt="Hyderabadi Diwani Handi"></a>
                 <h4>Spinach Cheese Ball</h4>
                 <p class="ingredients">
                   Crispy golden balls made from a blend of spinach and cheese, seasoned with herbs and spices, served with a tangy dipping sauce.
                 </p>
               </div>
               <div class="col-lg-4 menu-item">
-                <a href="assets/img/menu/menu-item-3.png" class="glightbox"><img src="assets/img/menu/menu-item-3.png" class="menu-img img-fluid" alt="Malai Kofta"></a>
+                <a href="assets/img/menu/italian/menu-item-3.png" class="glightbox"><img src="assets/img/menu/italian/menu-item-3.png" class="menu-img img-fluid" alt="Malai Kofta"></a>
                 <h4>Drums Of Heaven</h4>
                 <p class="ingredients">
                   Crispy fried chicken lollipops tossed in a spicy, tangy Indo-Chinese sauce.
                 </p>
               </div>
               <div class="col-lg-4 menu-item">
-                <a href="assets/img/menu/menu-item-4.png" class="glightbox"><img src="assets/img/menu/menu-item-4.png" class="menu-img img-fluid" alt="Palak Paneer"></a>
+                <a href="assets/img/menu/italian/menu-item-4.png" class="glightbox"><img src="assets/img/menu/italian/menu-item-4.png" class="menu-img img-fluid" alt="Palak Paneer"></a>
                 <h4>Kum Pao Chicken</h4>
                 <p class="ingredients">
                   Stir-fried chicken with peanuts, vegetables, and chili peppers in a savory Sichuan sauce.
                 </p>
               </div>
               <div class="col-lg-4 menu-item">
-                <a href="assets/img/menu/menu-item-5.png" class="glightbox"><img src="assets/img/menu/menu-item-5.png" class="menu-img img-fluid" alt="Chicken Bharta"></a>
+                <a href="assets/img/menu/italian/menu-item-5.png" class="glightbox"><img src="assets/img/menu/italian/menu-item-5.png" class="menu-img img-fluid" alt="Chicken Bharta"></a>
                 <h4>Lemon Pepper Fish</h4>
                 <p class="ingredients">
                   Tender fish fillets marinated with lemon juice and cracked black pepper, then grilled to perfection.
                 </p>
               </div>
               <div class="col-lg-4 menu-item">
-                <a href="assets/img/menu/menu-item-6.png" class="glightbox"><img src="assets/img/menu/menu-item-6.png" class="menu-img img-fluid" alt="Mugh Kolapuri"></a>
+                <a href="assets/img/menu/italian/menu-item-6.png" class="glightbox"><img src="assets/img/menu/italian/menu-item-6.png" class="menu-img img-fluid" alt="Mugh Kolapuri"></a>
                 <h4>Schezwan Chicken</h4>
                 <p class="ingredients">
                   Juicy chicken pieces cooked in a fiery Schezwan sauce with bell peppers and onions.
@@ -302,21 +302,21 @@
 
             <div class="row gy-5">
               <div class="col-lg-4 menu-item">
-                <a href="assets/img/menu/menu-item-4.png" class="glightbox"><img src="assets/img/menu/menu-item-4.png" class="menu-img img-fluid" alt="Palak Paneer"></a>
-                <h4>Exotic Boiled Vegetables</h4>
+                <a href="assets/img/menu/protin/menu-item-1.png" class="glightbox"><img src="assets/img/menu/protin/menu-item-1.png" class="menu-img img-fluid" alt="Palak Paneer"></a>
+                <h4>Exeotic Boiled Vegetables</h4>
                 <p class="ingredients">
                   A medley of seasonal vegetables lightly boiled and tossed with herbs for a healthy delight.
                 </p>
               </div>
               <div class="col-lg-4 menu-item">
-                <a href="assets/img/menu/menu-item-5.png" class="glightbox"><img src="assets/img/menu/menu-item-5.png" class="menu-img img-fluid" alt="Chicken Bharta"></a>
+                <a href="assets/img/menu/protin/menu-item-2.png" class="glightbox"><img src="assets/img/menu/protin/menu-item-2.png" class="menu-img img-fluid" alt="Chicken Bharta"></a>
                 <h4>Fish with Veg</h4>
                 <p class="ingredients">
                   Grilled fish fillets served with sautéed mixed vegetables and a light lemon butter sauce.
                 </p>
               </div>
               <div class="col-lg-4 menu-item">
-                <a href="assets/img/menu/menu-item-6.png" class="glightbox"><img src="assets/img/menu/menu-item-6.png" class="menu-img img-fluid" alt="Mugh Kolapuri"></a>
+                <a href="assets/img/menu/protin/menu-item-3.png" class="glightbox"><img src="assets/img/menu/protin/menu-item-3.png" class="menu-img img-fluid" alt="Mugh Kolapuri"></a>
                 <h4>Chicken with Veg</h4>
                 <p class="ingredients">
                   Succulent chicken breast cooked with assorted vegetables in a mild, protein-rich sauce.
@@ -377,7 +377,7 @@
                     </div>
                   </div>
                   <div class="col-lg-2 text-center">
-                    <img src="assets/img/testimonials/testimonials-1.jpg" class="img-fluid testimonial-img" alt="Rahman Khan - Food Critic">
+                    <img src="assets/img/testimonials/hello.png" class="img-fluid testimonial-img" alt="Rahman Khan - Food Critic">
                   </div>
                 </div>
               </div>
@@ -401,7 +401,7 @@
                     </div>
                   </div>
                   <div class="col-lg-2 text-center">
-                    <img src="assets/img/testimonials/testimonials-2.jpg" class="img-fluid testimonial-img" alt="Priyanka Chatterjee - Professor">
+                    <img src="assets/img/testimonials/hello.png" class="img-fluid testimonial-img" alt="Priyanka Chatterjee - Professor">
                   </div>
                 </div>
               </div>
@@ -425,7 +425,7 @@
                     </div>
                   </div>
                   <div class="col-lg-2 text-center">
-                    <img src="assets/img/testimonials/testimonials-3.jpg" class="img-fluid testimonial-img" alt="Arjun Basu - Business Executive">
+                    <img src="assets/img/testimonials/hello.png" class="img-fluid testimonial-img" alt="Arjun Basu - Business Executive">
                   </div>
                 </div>
               </div>
@@ -449,7 +449,7 @@
                     </div>
                   </div>
                   <div class="col-lg-2 text-center">
-                    <img src="assets/img/testimonials/testimonials-4.jpg" class="img-fluid testimonial-img" alt="Meera Shah - Travel Blogger">
+                    <img src="assets/img/testimonials/hello.png" class="img-fluid testimonial-img" alt="Meera Shah - Travel Blogger">
                   </div>
                 </div>
               </div>
@@ -465,7 +465,7 @@
                         <span>My children tried their first Mishti Doi here and now beg to come back every weekend! Watching them enjoy traditional Bengali sweets while learning about our culture fills my heart with joy. The staff even taught them to say 'khub bhalo'!</span>
                         <i class="bi bi-quote quote-icon-right"></i>
                       </p>
-                      <h3>Nandini & Rajiv Banerjee</h3>
+                      <h3>Nandini Banerjee</h3>
                       <h4>Local Parents</h4>
                       <div class="stars">
                         <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
@@ -473,7 +473,7 @@
                     </div>
                   </div>
                   <div class="col-lg-2 text-center">
-                    <img src="assets/img/testimonials/bengali-family.jpg" class="img-fluid testimonial-img" alt="Nandini & Rajiv Banerjee - Local Parents">
+                    <img src="assets/img/testimonials/hello.png" class="img-fluid testimonial-img" alt="Nandini & Rajiv Banerjee - Local Parents">
                   </div>
                 </div>
               </div>
