--- a/Avordaw Live Kitchen/index.html
+++ b/Avordaw Live Kitchen/index.html
@@ -66,8 +66,8 @@
         <div class="row gy-4 justify-content-center justify-content-lg-between">
           <div class="col-lg-5 order-2 order-lg-1 d-flex flex-column justify-content-center">
             <h1 data-aos="fade-up">Savor the Authentic<br>Flavors of the World</h1>
-            <p data-aos="fade-up" data-aos-delay="100">Experience a live kitchen with a rich variety of cuisines from around the globe, prepared fresh before your eyes. And we provide zero oil dishes with live 
-              fresh healthy and protin food.</p>
+            <p data-aos="fade-up" data-aos-delay="100">Experience a live kitchen with a rich variety of cuisines from around the globe, prepared fresh before your eyes. We also provide zero oil dishes with live 
+              fresh healthy and protein food.</p>
             <div class="d-flex" data-aos="fade-up" data-aos-delay="200">
               <a href="https://wa.me/9339279049" class="btn-get-started">Booka a Table</a>
             </div>
