--- a/Avordaw Live Kitchen/menu.html
+++ b/Avordaw Live Kitchen/menu.html
@@ -105,7 +105,7 @@
 
           <li class="nav-item">
             <a class="nav-link" data-bs-toggle="tab" data-bs-target="#menu-dinner">
-              <h4>Protin Food</h4>
+              <h4>Protein Food</h4>
             </a>
           </li><!-- End tab nav item -->
 
@@ -274,7 +274,7 @@
                 <a href="assets/img/menu/italian/menu-item-4.png" class="glightbox"><img src="assets/img/menu/italian/menu-item-4.png" class="menu-img img-fluid" alt="Palak Paneer"></a>
                 <h4>Kum Pao Chicken</h4>
                 <p class="ingredients">
-                  Stir-fried chicken with peanuts, vegetables, and chili peppers in a savory Sichuan sauce.
+                  Stir-fried chicken with peanuts, vegetables, and chili peppers in a savory Sichuan chili sauce.
                 </p>
               </div>
               <div class="col-lg-4 menu-item">
