--- a/Avordaw Live Kitchen/index.html
+++ b/Avordaw Live Kitchen/index.html
@@ -346,12 +346,12 @@
     <section id="contact" class="contact section">
 
       <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
+      <div class="container section-title" data-aos="fade-up" data-aos-delay="100">
         <h2>Contact</h2>
         <p><span>Visit Us</span> <span class="description-title">Or Get In Touch</span></p>
       </div><!-- End Section Title -->
 
-      <div class="container" data-aos="fade-up" data-aos-delay="100">
+      <div class="container" data-aos="fade-up" data-aos-delay="200">
 
         <div class="mb-5">
           <iframe style="width: 100%; height: 400px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3682.032659487907!2d88.3758995!3d22.652570900000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39f89db1686595c5%3A0x3c53b5a9fb43f939!2sMotilal%20Oswal%20Financial%20Services%20Limited!5e0!3m2!1sen!2sin!4v1747809893931!5m2!1sen!2sin" frameborder="0" allowfullscreen=""></iframe>
